Fixing the other products image size on mobile

--- a/src/scss/modules/_other-products.scss
+++ b/src/scss/modules/_other-products.scss
@@ -47,6 +47,16 @@
         }
 
         &-image {
+
+            img {
+
+                @media screen and (max-width: 1024px){
+                    width: 100%;
+                    height: auto;
+                }
+
+            }
+            
             position: relative;
 
             &.discount {
